kubernetes/json-server-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: json-server   # will be used as a value in
  labels:                 # WORDPRESS_DB_HOST in wordpress-deploy.yml
    app: json-server
spec:
  ports:
    - port: 80
  selector:
    app: json-server
    tier: backend
  #type: ClusterIP
  type: NodePort
---
apiVersion:  apps/v1beta2 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: json-server
  labels:
    app: json-server
spec:
  selector:
    matchLabels:
      app: json-server
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: json-server
        tier: backend
    spec:
      containers:
      - image: clue/json-server
        name: json-server
        ports:
        - containerPort: 80
          name: json-server
        volumeMounts:
        - name: json-server-persistent-storage  # which data will be stored
          mountPath: "/data"
      volumes:
      - name: json-server-persistent-storage    # PVC
        persistentVolumeClaim:
          claimName: json-server-persistent-storage
