kubernetes/php-deploy.yaml
# create a service for php-server
apiVersion: v1
kind: Service
metadata:
  name: php-server
  labels:
    app: php-server
spec:
  ports:
    - port: 80
  selector:
    app: php-server
    tier: frontend
  type: NodePort
---
apiVersion: apps/v1beta2 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: php-server
  labels:
    app: php-server
spec:
  selector:
    matchLabels:
      app: php-server
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: php-server
        tier: frontend
    spec:
      containers:
      - image: php:7.0-apache
        name: php-server
        ports:
        - containerPort: 80
          name: php-server
        volumeMounts:
        - name: php-server-persistent-storage
          mountPath: "/var/www/html"          # which data will be stored
      volumes:
      - name: php-server-persistent-storage
        persistentVolumeClaim:
          claimName: php-server-persistent-storage
